fix: nudge distance indicator z-index

--- a/packages/ui/src/components/css/loo-list-item.module.css
+++ b/packages/ui/src/components/css/loo-list-item.module.css
@@ -20,7 +20,7 @@
 	border-radius: 0.5rem 0 0;
 	color: #fff;
 	background-color: #1a1a1a;
-	z-index: 1000;
+	z-index: 1002;
 }
 
 .link {
